[package]
name = "linda"
description = "A multi-threaded HTTP/1.1 server"
repository = "https://github.com/NullSense/Linda"
keywords = ["http", "server", "web"]
categories = ["web-programming"]
version = "0.2.0"
authors = ["Aerial <matas234@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.3.0"
log = "0.4.8"
